<resources>
  <string name="required_task">This field is required</string>
  <string name="no_fine_location_permissions">Cannot show current location without
    permission</string>
  <string name="location_updates_unknown_error">Failed to enable location updates</string>
  <string name="location_disabled_in_settings">Please enable location in system settings</string>
  <string name="map_view">Map view</string>
  <string name="unexpected_error">An unexpected error has occurred</string>
  <string name="google_api_install_failed">Google Play Services installation failed</string>
  <string name="sign_out">Sign out</string>
  <string name="ok">OK</string>
  <string name="collect_data">Collect data</string>
  <string name="offline_area_selector">Select area to download</string>
  <string name="offline_area_selector_prompt">Select a base map for offline use</string>
  <string name="offline_area_selector_download">Download</string>
  <string name="camera">Camera</string>
  <string name="photo_preview">Preview</string>
  <string name="settings">Settings</string>
  <string name="offline_area_viewer_title">Downloaded area</string>
  <string name="offline_area_viewer_remove_button">Remove from device</string>
  <string name="offline_area_selector_select">Select area</string>
  <string name="no_basemaps_downloaded">No imagery downloaded for offline use. Tap “Select and download” to get started.</string>
  <string name="signing_in">Signing in</string>
  <string name="build">Build %s</string>
  <string name="tos_title">Terms of service</string>
  <string name="agree_terms">Agree</string>
  <string name="agree_checkbox">I agree</string>
  <string name="date">Date</string>
  <string name="time">Time</string>
  <string name="sync_status">Data sync status</string>
  <string name="add_point">Add point</string>
  <string name="complete_polygon">Complete</string>
  <string name="add_polygon_instructions">Drag the map and tap “Add point“ to add points to your polygon. To finish, return to the original point and tap “Complete“.</string>
  <string name="road_map">Road map</string>
  <string name="satellite">Satellite</string>
  <string name="terrain">Terrain</string>
  <string name="next">Next</string>
  <string name="select_survey_title">Select a survey</string>
  <string name="survey_sync_hint">Once opened, surveys are available offline and synced automatically when online.</string>
  <string name="sync_dialog_subtitle">Your data will be synced shortly.</string>
  <string name="data_collected">Data collected</string>
  <string name="done">Done</string>
  <string name="skip">Skip</string>
  <string name="drop_pin">Drop pin</string>
  <string name="new_site">New data collection site</string>
  <string name="new_site_hint_text">Add new site and submit related data</string>
  <string name="drop_a_pin_tooltip_text">Drag your map until the center pin is on the desired location</string>
  <string name="current_location">Current location:</string>
  <string name="loading">Loading…</string>
  <string name="no_tasks_error">This job has no more tasks to complete</string>
  <string name="invalid_data_sharing_terms">This survey is misconfigured (no data sharing terms available). Please contact the survey organizer.</string>
  <string name="collect_data_viewer_error">Can’t collect data as user is a VIEWER</string>
  <string name="offline_map_imagery">Offline map imagery</string>
  <string name="offline_map_imagery_pref_description">Hide or show downloaded imagery</string>
  <string name="layers">Layers</string>
  <string name="base_map">Base map</string>
  <string name="offline_map_imagery_download_progress_dialog_title">Download progress</string>
  <string name="offline_map_imagery_download_progress_dialog_message">Downloading offline map imagery…</string>
  <string name="multiple_regions">Multiple regions</string>
  <string name="permission_denied">Permission denied</string>
  <string name="close_app">Close app</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="no_imagery_available_for_area">No imagery for this area. Select an area with imagery to download to your device.</string>
  <string name="selected_offline_area_size">The selected area may take up to %s\u00A0MB of space on your device</string>
  <string name="selected_offline_area_too_large">Zoom in and select a smaller area to download to your device</string>
  <string name="offline_area_size_loading_symbol">…</string>
  <string name="offline_area_select_cancel_button">Cancel</string>
  <string name="offline_area_selector_title">Download this area?</string>
  <string name="capture">Capture</string>
  <string name="surveys">Surveys</string>
  <string name="offline_icon_description">Icon shown when the survey is available offline</string>
  <string name="remove_offline_access">Remove offline access</string>
  <string name="point">Point</string>
  <string name="area">Area</string>
  <string name="unnamed_point">Unnamed point</string>
  <string name="unnamed_area">Unnamed area</string>
  <string name="offline_area_size_on_disk_mb">%s\u00A0MB on disk</string>
  <string name="offline_area_list_item_size_on_disk_mb">%s\u00A0MB</string>
  <string name="offline_downloaded_areas">Downloaded areas</string>
  <string name="offline_area_list_tip">Available for offline viewing</string>
  <string name="offline_area_list_item_icon">Offline area list item icon</string>
  <string name="no_surveys_available">No surveys available. Contact your survey organizer to get access.</string>
  <string name="previous">Previous</string>
  <string name="network_error_when_signing_in">Connect to the internet to sign in</string>
  <string name="camera_permissions_needed">You need to grant this application camera permissions to submit photos.</string>
  <string name="incomplete_area">Incomplete area</string>
  <string name="initializing">Initializing…</string>
  <string name="draw_area_task_instruction">Move the map and tap “Add point” to add points around the desired area.</string>
  <string name="close">Close</string>
  <string name="data_consent_dialog_title">Data sharing agreement</string>
  <string name="map_location">Map location:</string>
  <string name="sign_out_dialog_title">Unsynced data</string>
  <string name="sign_out_dialog_body">If you sign out, any unsynced data will be discarded</string>
  <string name="suggest_data_collection_hint">Zoom in to start collecting data</string>
  <string name="read_only_data_collection_hint">Survey is read-only</string>
  <string name="predefined_data_collection_hint">Zoom in to a data collection site to collect data</string>
  <string name="no_submissions">No submissions</string>
  <string name="dismiss_info_popup">Dismiss</string>
  <string name="other">Other</string>
  <plurals name="submission_count">
    <item quantity="one">%d submission</item>
    <item quantity="other">%d submissions</item>
  </plurals>
  <string name="loi_name_dialog_title">Name this location</string>
  <string name="loi_name_dialog_body">A new data collection site will be created.</string>
  <string name="current_survey">Current survey</string>
  <string name="switch_survey">Switch survey</string>
  <string name="no_survey_selected">No survey selected</string>
  <string name="undo">Undo</string>
  <string name="view_licenses_title">Licenses</string>
  <string name="about">About</string>
  <string name="terms_of_service">Terms of service</string>
  <string name="about_ground">Ground is an open-source community project built by Google and FAO under the Forest Data Partnership with help from SIG, Ecam, and open-source community contributors. \n\nIt is licensed under the <annotation type="apache_license">Apache License, Version 2.0</annotation>. \n\nView other <annotation type="all_licenses">Licenses</annotation></string>
  <string name="failed">Failed</string>
  <string name="synced">Synced</string>
  <string name="syncing">Syncing</string>
  <string name="upload_pending">Upload pending</string>
  <string name="data_synced_media_pending">Data synced\n(media pending)</string>
  <string name="data_synced_media_pending_retry">Data synced\n(media pending retry)</string>
  <string name="media_syncing">Media syncing</string>
  <string name="data_sync_status">Data sync status</string>
  <string name="signout_warning">If you sign out, all unsaved data will be lost.</string>
  <string name="admin_request_access">To continue, contact your system administrator to request access.</string>
  <string name="signup_request_access">To continue, <annotation type="sign_up_link">sign up to request access</annotation>.</string>
  <string name="general_title">General</string>
  <string name="upload_media_title">Upload Media</string>
  <string name="over_wifi_summary">Over Wi-Fi only</string>
  <string name="help_title">Help</string>
  <string name="visit_website_title">Visit website</string>
  <string name="send_feedback_title">Send feedback</string>
  <string name="report_summary">Report technical issues or suggest new locationsOfInterest</string>
  <string name="not_yet_impl_title">Not yet implemented</string>
  <string name="accuracy">Accuracy:</string>
  <string name="data_sharing_no_terms">*No terms to display.*</string>
  <string name="data_sharing_private_message">
    ## Private data sharing
    \nData will only be shared with survey organizers, who may not share and use collected data publicly.
  </string>
</resources>