<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:key="general_category"
    app:title="@string/general_title">

    <SwitchPreferenceCompat
      app:iconSpaceReserved="false"
      app:key="upload_media"
      app:summary="@string/over_wifi_summary"
      app:title="@string/upload_media_title" />
  </PreferenceCategory>

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:key="help_category"
    app:title="@string/help_title">

    <Preference
      app:iconSpaceReserved="false"
      app:key="visit_website"
      app:summary="@string/ground_website"
      app:title="@string/visit_website_title" />

    <!-- TODO: Re-enable once the locationOfInterest is implemented -->
    <!-- Issue URL: https://github.com/google/ground-android/issues/742 -->
    <Preference
      app:iconSpaceReserved="false"
      app:isPreferenceVisible="false"
      app:key="feedback"
      app:summary="@string/report_summary"
      app:title="@string/send_feedback_title" />

  </PreferenceCategory>

</PreferenceScreen>
