<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2023 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <import type="android.view.View" />
    <variable
      name="viewModel"
      type="org.groundplatform.android.ui.surveyselector.SurveySelectorViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainer"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/ic_arrow_back"
      app:title="@string/surveys" />

    <LinearLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar">

      <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.App.TitleMedium.OnSurfaceContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/select_survey_title" />

      <TextView
        android:id="@+id/help_text"
        style="@style/TextAppearance.App.BodySmall.OnSurfaceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/survey_sync_hint" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/survey_card_item" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/emptyContainer"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:gravity="center"
      android:orientation="vertical"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar">
      <TextView
        android:id="@+id/no_surveys_help_text"
        style="@style/TextAppearance.App.TitleMedium.OnSurfaceContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/no_surveys_available" />
      <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="@{() -> viewModel.signOut()}"
        android:text="@string/sign_out" />
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
