<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2023 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp"
  app:layout_constraintCircleRadius="32dp">


  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/permission_denied"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:textColor="?attr/colorOnSurface"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="@string/contact_survey_organizer_to_obtain_access"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:textColor="?attr/colorOnSurfaceVariant"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/title" />

  <Button
    android:id="@+id/close"
    style="@style/ChipButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="10dp"
    android:text="@string/close_app"
    app:backgroundTint="?attr/colorPrimary"
    app:layout_constraintEnd_toStartOf="@+id/sign_out"
    app:layout_constraintTop_toBottomOf="@+id/subtitle" />

  <Button
    android:id="@+id/sign_out"
    style="@style/ChipButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    android:text="@string/sign_out"
    app:backgroundTint="@android:color/holo_red_light"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/subtitle"
    app:layout_constraintTop_toTopOf="@id/close" />

</androidx.constraintlayout.widget.ConstraintLayout>