<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2023 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <variable
      name="viewModel"
      type="com.google.android.ground.ui.common.CameraPermissionDeniedDialogViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    app:layout_constraintCircleRadius="32dp">

    <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/permission_denied"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="?attr/colorOnSurface"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/camera_permissions_needed"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="?attr/colorOnSurfaceVariant"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
      android:id="@+id/acknowledge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="10dp"
      android:onClick="@{() -> viewModel.closeDialog()}"
      android:text="@string/ok"
      app:backgroundTint="?attr/colorPrimary"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/subtitle"
      app:layout_constraintStart_toStartOf="parent"/>

    <Button
      android:id="@+id/close"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="10dp"
      android:onClick="@{() -> viewModel.exitDataCollectionFlow()}"
      android:text="@string/exit"
      app:backgroundTint="?attr/colorError"
      app:layout_constraintTop_toBottomOf="@id/subtitle"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>