<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2022 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="viewModel"
      type="com.google.android.ground.ui.home.mapcontainer.MapTypeViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    android:paddingBottom="64dp">

    <View
      android:id="@+id/drag_handle"
      android:layout_width="32dp"
      android:layout_height="4dp"
      android:background="#747775"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/dialog_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/layers"
      android:textSize="22sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/drag_handle" />

    <TextView
      android:id="@+id/base_map_selector_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="27dp"
      android:text="@string/base_map"
      android:textColor="?attr/colorOnSurface"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingTop="11dp"
      android:paddingBottom="14dp"
      app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/base_map_selector_title"
      tools:itemCount="3"
      tools:listitem="@layout/map_type_dialog_item" />

    <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#DADCE0"
      app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    <TextView
      android:id="@+id/offline_map_pref_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="38dp"
      android:text="@string/offline_map_imagery"
      android:textColor="?attr/colorOnSurface"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divider" />

    <!-- TODO: Highlight the text "this source" and make it clickable. -->
    <!-- Issue URL: https://github.com/google/ground-android/issues/1753 -->
    <TextView
      android:id="@+id/offline_map_pref_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/offline_map_imagery_pref_description"
      android:textColor="?attr/colorSecondary"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/offline_map_pref_title" />

    <com.google.android.material.materialswitch.MaterialSwitch
      android:id="@+id/offline_map_preference_switch"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:checked="@{viewModel.offlineImageryEnabled}"
      android:onCheckedChanged="@{(view, value) -> viewModel.offlineImageryPreferenceUpdated(value)}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/offline_map_pref_title" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
