<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
      name="user"
      type="com.google.android.ground.model.User" />
    <variable
      name="survey"
      type="com.google.android.ground.model.Survey" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="22dp"
    android:background="?attr/colorSurfaceVariant"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/user_image"
      style="@style/NavDrawerHeader.Image"
      app:imageUrl="@{user.photoUrl}"
      tools:background="@drawable/ground_logo" />

    <TextView
      android:id="@+id/user_display_name"
      style="@style/NavDrawerHeader.PrimaryText"
      android:text="@{user.displayName}"
      tools:text="User name" />

    <TextView
      android:id="@+id/user_email"
      style="@style/NavDrawerHeader.SecondaryText"
      android:text="@{user.email}"
      tools:text="User email" />
    <com.google.android.material.divider.MaterialDivider
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
    <LinearLayout
      style="@style/NavDrawerHeader"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fitsSystemWindows="true"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_survey"
        app:drawableStartCompat="@drawable/ic_content_paste"
        tools:text="Current survey" />
      <TextView
        android:id="@+id/no_surveys_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/no_survey_selected"
        android:visibility="gone" />
      <LinearLayout
        android:id="@+id/survey_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@{survey.title}"
          android:textStyle="bold"
          tools:text="Deforestation areas" />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@{survey.description}"
          tools:text="A survey about farms. Collect information on all the farms." />
      </LinearLayout>
      <TextView
        android:id="@+id/switch_survey_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/switch_survey"
        android:textColor="@color/task_transparent_btn_selector" />
    </LinearLayout>
  </LinearLayout>
</layout>